Fixed chat bubble alignment

--- a/toka/app/webapp/assets/css/toka.css
+++ b/toka/app/webapp/assets/css/toka.css
@@ -914,7 +914,7 @@ a.category-item, a.category-item:hover, a.category-item:visited {
     overflow: hidden;
 }
 .chatroom-message {
-    padding-left: 35px;
+    padding-left: 40px;
     margin-bottom: 15px;
     list-style: none;
 }
@@ -1017,17 +1017,17 @@ a.category-item, a.category-item:hover, a.category-item:visited {
         height: 30px;
         border-radius: 50%;
         padding: 5px;
-        margin-left: -25px;
+        margin-left: -30px;
     }
         .chatroom-message .chat .profilePic img {
             height: 20px;
         }
 .chatroom-message .info {
-    margin-bottom: 5px;
+    margin-bottom: 5px;    
+    margin-left: -30px;
 }
 .chatroom-message .info .username {
     font-weight: bold;
-    margin-left: -25px;
 }
 .chatroom-message .info .timestamp {
     float: right;
@@ -1059,7 +1059,7 @@ a.category-item, a.category-item:hover, a.category-item:visited {
     content: "";
     position: absolute;
     top: 2px;
-    left: 10px;
+    left: 5px;
     border-style: solid;
     border-width: 12px 15px 15px 0;
     border-color: transparent #dff0d8;
@@ -1112,35 +1112,18 @@ a.category-item, a.category-item:hover, a.category-item:visited {
  * tags: chatroom, page, chat
  */
 @media (max-width: 768px) {
-    .chatroom-message .text {
-        padding: 3px 11px;
-        margin-left: 12px;
-    }
-    .chatroom-message .text:after {
-        top: 2px;
-        left: 7px;
-        border-width: 12px 15px 15px 0;
-    }
     .chatroom-message .youtube .preview img {
-        width: 150px;
+        width: 100%;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
-        border-bottom-right-radius: 0px;
-        border-bottom-left-radius: 0px;
-    }
-    .chatroom-message .youtube .desc {
-        height: 35px;
-        width: 150px;
-        border-top-right-radius: 0px;
-        border-top-left-radius: 0px;
         border-bottom-right-radius: 5px;
         border-bottom-left-radius: 5px;
     }
-    .chatroom-message .youtube .yt-video-desc {
+    .chatroom-message .youtube .desc {
         display: none;
     }
-    .chatroom-message .text {
-        float: none;
+    .chatroom-message .youtube .yt-video-desc {
+        display: none;
     }
 }
 @media (min-width: 1200px) {
